# Voidforged

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENTS_AUDIT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  VOIDFORGED_ENTERPRISE_AUDIT.md
.github/workflows/: main.yml  pr.yml  release.yml
assets/: asset_pipeline.ron
assets/shaders/: glow.wgsl
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bundles.rs  components.rs  db.rs  events.rs  hitbox.rs  lib.rs  plugin.rs  resources.rs  specs.rs  tween.rs
crates/core/src/items/: definitions.rs  equipment.rs  gear_score.rs  instance.rs  inventory.rs  mod.rs  modifiers.rs  rarity.rs  slots.rs
crates/core/src/resources/: assets.rs  combat.rs  death.rs  dungeon.rs  game.rs  input.rs  items_db.rs  meta.rs  mod.rs  profiles.rs  state.rs
crates/core/tests/: test_core.rs
crates/dungeon/: Cargo.toml
crates/dungeon/src/: lib.rs  plugin.rs  raid.rs  rooms.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: collection.rs  combat.rs  death.rs  enemy.rs  enemy_abilities.rs  equipment.rs  lib.rs  loot.rs  pickup.rs  player.rs  plugin.rs  projectile.rs
crates/gameplay/src/classes/: abilities.rs  ability_ranks.rs  auto_attack.rs  buffs.rs  hunter.rs  mage.rs  mod.rs  paladin.rs  rogue.rs  rotation.rs  warrior.rs
crates/gameplay/src/classes/hunter/: abilities.rs  auto_attack.rs  mod.rs  passives.rs
crates/gameplay/src/classes/mage/: abilities.rs  auto_attack.rs  mod.rs  passives.rs
crates/gameplay/src/classes/paladin/: abilities.rs  auto_attack.rs  mod.rs  passives.rs
crates/gameplay/src/classes/rogue/: abilities.rs  auto_attack.rs  mod.rs  passives.rs
crates/gameplay/src/classes/warrior/: abilities.rs  auto_attack.rs  mod.rs  passives.rs
crates/gameplay/src/combat/: damage.rs  hitboxes.rs  knockback.rs  mod.rs  projectiles.rs  stamina.rs  status_effects.rs
crates/gameplay/src/enemy/: ai.rs  attacks.rs  mod.rs  movement.rs
crates/gameplay/tests/: test_loot.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  lib.rs  plugin.rs  protocol.rs  replication.rs  server.rs
crates/procedural/: Cargo.toml
crates/procedural/src/: lib.rs  loot.rs  plugin.rs  waves.rs
crates/procedural/tests/: test_procedural.rs
crates/progression/: Cargo.toml
crates/progression/src/: leveling.rs  lib.rs  plugin.rs  upgrades.rs
crates/progression/tests/: test_progression.rs
crates/rendering/: Cargo.toml
crates/rendering/src/: assets.rs  audio.rs  camera.rs  effects.rs  lib.rs  lighting.rs  plugin.rs  proc_meshes.rs  spawn.rs  tween_system.rs  ui_icons.rs  ui_textures.rs
crates/rendering/src/asset_pipeline/: animation.rs  bindings.rs  config.rs  loader.rs  mod.rs  slots.rs
crates/rendering/src/hud/: ability_bar.rs  buffs.rs  character_select.rs  components.rs  equipment.rs  inventory.rs  layout.rs  menu.rs  minimap.rs  mod.rs  nameplates.rs  notifications.rs  player_frame.rs  settings.rs  target_frame.rs  tooltips.rs  updates.rs  upgrade_tree.rs  zone_transition.rs
crates/save/: Cargo.toml
crates/save/src/: lib.rs
crates/save/tests/: test_save.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  plugin.rs  server_app.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  map.rs  plugin.rs  zone.rs
src/: main.rs
