[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/rendering",
    "crates/gameplay",
    "crates/procedural",
    "crates/progression",
    "crates/network",
    "crates/server",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.15", features = ["bevy_asset", "bevy_scene", "bevy_render", "bevy_pbr", "bevy_core_pipeline", "bevy_gltf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
