[package]
name = "ir-core"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
serde_json = { workspace = true }
