[package]
name = "ir-gameplay"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
ir-core = { path = "../core" }
ir-procedural = { path = "../procedural" }
ir-world = { path = "../world" }
ir-dungeon = { path = "../dungeon" }
ir-progression = { path = "../progression" }
