[package]
name = "ir-rendering"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_hanabi = { workspace = true }
ir-core = { path = "../core" }
ir-world = { path = "../world" }
rand = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
