[package]
name = "ir-rendering"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_hanabi = { workspace = true }
bevy_sprite = "0.15"
ir-core = { path = "../core" }
ir-world = { path = "../world" }
ir-progression = { path = "../progression" }
rand = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
